--- a/alaorden/.gitignore
+++ b/alaorden/.gitignore
@@ -16,6 +16,7 @@ speed-measure-plugin*.json
 
 # IDEs and editors
 /.idea
+/alaorden.iml
 .project
 .classpath
 .c9/
@@ -44,3 +45,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+/target/
