--- a/alaorden/src/main/resources/application.properties
+++ b/alaorden/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/alaorden_dev
+spring.datasource.username=root
+spring.datasource.password=Root123*
