--- a/alaorden/src/main/resources/application.properties
+++ b/alaorden/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/alaorden_dev
 spring.datasource.username=root
 spring.datasource.password=DBA2020
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
